--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1146,3 +1146,14 @@ keywords = {open source, music information retrieval, audio analysis, sound and 
 location = {Barcelona, Spain},
 series = {MM '13}
 }
+
+@inbook{frametheory,
+author = {Balazs, Peter and Holighaus, Nicki and Necciari, Thibaud and Stoeva, Diana},
+year = {2017},
+month = {06},
+pages = {225-268},
+title = {Frame Theory for Signal Processing in Psychoacoustics},
+isbn = {978-3-319-54710-7},
+journal = {Applied and Numerical Harmonic Analysis},
+doi = {10.1007/978-3-319-54711-4_10}
+}
